fix(P5) : money범위에 벗어난 값이 들어오면 0으로 채워진 list반환